--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Liti News</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="news_image">News Image</string>
     <string name="err_no_internet">No Internet Connection</string>
+    <string name="read_more">Read More…</string>
 </resources>
