--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="news_image">News Image</string>
     <string name="err_no_internet">No Internet Connection</string>
     <string name="read_more">Read More…</string>
+    <string name="err_news_empty">No News Found</string>
 </resources>
